# spydecy

./: .gitignore  .pmat.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECY-INTEGRATION-PLAN.md  INSTALL.md  MVP-READY.md  Makefile  PHASE-2-PLAN.md  PHASE-2.1-COMPLETE.md  PHASE-2.2-COMPLETE.md  PHASE-2.3-COMPLETE.md  PHASE-2.5-COMPLETE.md  QUICK-START.md  README.md  RELEASE-v0.1.0.md  SETUP-COMPLETE.md  SPRINT-0-SUCCESS.md  SPRINT-2-COMPLETE.md  SPRINT-2-PROGRESS.md  SPRINT-3-PROGRESS.md  SPRINT-4-PROGRESS.md  SPRINT-5-COMPLETE.md  SPRINT-5-PLAN.md  SPRINT-5-SERIES-SUMMARY.md  book.toml  test_example.py
.github/workflows/: benchmark.yml  book.yml  ci.yml  release-gate.yml
benches/: codegen_performance.rs  optimizer_benchmarks.rs  unification_benchmarks.rs
book/src/: SUMMARY.md  api-docs.md  architecture.md  boundary-elimination.md  changelog.md  cli-reference.md  codegen.md  contributing.md  custom-patterns.md  debugging.md  faq.md  first-unification.md  installation.md  introduction.md  optimization-pipeline.md  optimizer.md  parsers.md  quick-start.md  release-process.md  roadmap.md  specification.md  testing.md  type-system.md  unification-patterns.md  unified-hir.md
book/src/parsers/: c.md  python.md
book/src/patterns/: append.md  dict-get.md  len.md
crates/spydecy-analyzers/: Cargo.toml
crates/spydecy-analyzers/src/: lib.rs
crates/spydecy-bootstrap/: Cargo.toml
crates/spydecy-c/: Cargo.toml
crates/spydecy-c/src/: cpython.rs  decy_adapter.rs  hir_converter.rs  lib.rs  parser.rs
crates/spydecy-codegen/: Cargo.toml
crates/spydecy-codegen/src/: lib.rs
crates/spydecy-debugger/: Cargo.toml
crates/spydecy-debugger/src/: commands.rs  lib.rs  repl.rs  state.rs  stepper.rs  visualize.rs
crates/spydecy-decy-bridge/: Cargo.toml
crates/spydecy-decy-bridge/src/: lib.rs
crates/spydecy-hir/: Cargo.toml
crates/spydecy-hir/src/: c.rs  error.rs  lib.rs  metadata.rs  python.rs  types.rs  unified.rs
crates/spydecy-optimizer/: Cargo.toml
crates/spydecy-optimizer/src/: lib.rs
crates/spydecy-python/: Cargo.toml
crates/spydecy-python/src/: hir_converter.rs  lib.rs  parser.rs  type_extractor.rs
docs/specification/: INCREMENTAL-DEBUGGER-ROADMAP.md  PLUGGABLE-C-API-ARCHITECTURE.md  README.md  RESPONSE-TO-GEMINI-REVIEW.md  SPRINT-0-TRACER-BULLET.md  transpiled-python-c-to-rust-self-hosted-compiler-debugger.md
examples/: real_world_list_ops.py
sample-outputs/: len.c  len.py  len.rs
sprint0-tracer-bullet/: Cargo.toml  NEXT-STEPS.md  README.md
sprint0-tracer-bullet/examples/: list_length.c  test_len.py
sprint0-tracer-bullet/src/: lib.rs
sprint0-tracer-bullet/tests/: e2e_tracer_bullet.rs
src/: lib.rs  main.rs
tests/: e2e_argument_flow.rs  e2e_clear.rs  e2e_error_messages.rs  e2e_full_pipeline.rs  e2e_pop.rs  e2e_real_world_validation.rs  e2e_reverse.rs  e2e_unification.rs  optimizer_integration.rs
tests/real_world/cpython/: list_reverse.c
tests/real_world/python/: test_reverse.py
