[package]
name = "spydecy-codegen"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust code generator for Spydecy transpiler - generates idiomatic safe Rust"
repository = "https://github.com/noahgift/spydecy"
authors = ["Spydecy Team <team@spydecy.dev>"]
keywords = ["codegen", "transpiler", "rust", "generator"]
categories = ["compilers", "development-tools"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
spydecy-hir = { version = "0.3.0", path = "../spydecy-hir" }

[dev-dependencies]
proptest = "1.5"

[lints]
workspace = true
