[package]
name = "spydecy-debugger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Introspective debugger for Spydecy transpiler"
repository = "https://github.com/noahgift/spydecy"
authors = ["Spydecy Team <team@spydecy.dev>"]
keywords = ["debugger", "transpiler", "introspection"]
categories = ["compilers", "development-tools::debugging"]

[dependencies]
# HIR and parser dependencies
spydecy-hir = { version = "0.2.0", path = "../spydecy-hir" }
spydecy-python = { version = "0.2.0", path = "../spydecy-python" }
spydecy-c = { version = "0.2.0", path = "../spydecy-c" }
spydecy-optimizer = { version = "0.2.0", path = "../spydecy-optimizer" }
spydecy-codegen = { version = "0.2.0", path = "../spydecy-codegen" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for output formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors and formatting
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
