[package]
name = "spydecy-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Source location tracking
codespan = "0.11"
codespan-reporting = "0.11"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.5"

[lints]
workspace = true
