[package]
name = "spydecy-optimizer"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
spydecy-hir = { version = "0.2.0", path = "../spydecy-hir" }

[dev-dependencies]
proptest = "1.5"

[lints]
workspace = true
